# blender_doc

./: .gitignore  README.md  example_usage.py  pyproject.toml  requirements.txt  setup.py  test_blender_deps.py
src/blender_doc/: __init__.py  blender_integration.py  cli.py  data_structures.py  digraph_builder.py  file_processor.py  file_scanner.py  main.py  metadata_extractor.py  pdf_exporter.py
